# gkrp_data_portal

./: .env.template  .gitignore  AGENTS.md  CHART.md  EDA.md  EXPLORATORY_DATA_ANALYSIS.md  Makefile  NORMALIZATION.md  README.md  alembic.ini  create_app_db_from_restore_and_populate.sh  docker-compose.yaml  opencode.json
.agent/: TASKS.md  WORKLOG.md
alembic/: env.py
docs/: MIGRATION_PLAN.md
gkrp_data_portal/: pyproject.toml  requirements.txt
gkrp_data_portal/src/gkrp_data_portal/: __main__.py  main.py
gkrp_data_portal/src/gkrp_data_portal/auth/: deps.py
gkrp_data_portal/src/gkrp_data_portal/core/: email.py  invitations.py  logging.py  settings.py
gkrp_data_portal/src/gkrp_data_portal/db/: base.py  session.py
gkrp_data_portal/src/gkrp_data_portal/models/: __init__.py  archaeology.py  auth.py  constants.py
gkrp_data_portal/src/gkrp_data_portal/ui/: app.py
gkrp_data_portal/src/gkrp_data_portal/ui/pages/: accept_invite.py  admin.py  analytics.py  analytics_chart.py  analytics_common.py  analytics_table.py  dev_login.py  fragments.py  layers.py  ornaments.py  register.py
gkrp_data_portal/src/gkrp_data_portal/ui/repository/: admin_repo.py  analytics_repo.py  archaeology_repo.py
gkrp_data_portal/tests/: conftest.py  test_admin_repo.py  test_analytics_common.py  test_analytics_repo.py  test_archaeology_repo.py  test_auth_deps.py  test_constants.py  test_email.py  test_invitations.py  test_logging.py  test_session.py  test_settings.py
scripts/: README.md  analyze_differences.sh  analyze_refreshed.sh  dump_fixed_db.sh  extract_locationid_mapping.sh  (+2 more)
(+5 files in other folders)
